recursion.lessons.recursion.koch.Crab.scala.error
Crab:4: error: ')' expected but '}' found.
  	crab(levels,length*Math.sqrt(2)}
                                       ^Crab:12: error: expected start of definition
	override def run() {
                 ^Crab:15: error: Unmatched closing brace '}' ignored here
}
^